Update the data ingestion

--- a/research/02_prepare_model.ipynb
+++ b/research/02_prepare_model.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('../')"
+    "import os"
    ]
   },
   {
@@ -46,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-'"
+       "'/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research'"
       ]
      },
      "execution_count": 4,
@@ -60,7 +31,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,12 @@
     "@dataclass\n",
     "class PrepareModelConfig:\n",
     "    root_dir: Path\n",
-    "    model_path: Path \n",
-    "    params_image_size: int\n",
-    "    "
+    "    model: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +105,7 @@
     "\n",
     "        prepare_model_config = PrepareModelConfig(\n",
     "            root_dir=Path(config.root_dir),\n",
-    "            model_path = Path(config.model_path),\n",
+    "            model = Path(config.model_path),\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "        )\n",
     "        return prepare_model_config"
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,26 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib import request\n",
-    "\n",
-    "    \n",
-    "class PrepareModel:\n",
+    "class PrepareBaseModel:\n",
     "    def __init__(self, config: PrepareModelConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    def model(self,):\n",
-    "        self.model = YOLO('yolov8n.pt')\n",
-    "        create_directories([self.config.model_path])\n",
-    "        try:\n",
-    "            response = request.get(self.model, stream=True)\n",
-    "            response.raise_for_status()\n",
-    "        except Exception as e:\n",
-    "            raise e\n",
-    "            \n",
+    "\n",
+    "    \n",
+    "    def get_model(self):\n",
+    "        model = self.config.model\n",
+    "        return model\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "   \n",
     "\n",
     "\n",
     "    \n"
@@ -155,39 +152,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-15 16:58:32,062: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2023-09-15 16:58:32,065: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-09-15 16:58:32,067: INFO: common: created directory at: artifacts]\n",
-      "[2023-09-15 16:58:32,069: INFO: common: created directory at: artifacts/prepare_model]\n"
+      "[2023-09-18 15:30:04,896: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-09-18 15:30:05,023: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-09-18 15:30:05,024: INFO: common: created directory at: artifacts]\n",
+      "[2023-09-18 15:30:05,027: INFO: common: created directory at: artifacts/prepare_model]\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'ConfigurationManager' object has no attribute 'model_path'",
+     "ename": "BoxKeyError",
+     "evalue": "\"'ConfigBox' object has no attribute 'model_path'\"",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'model_path'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'model_path'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb Cell 10\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     prepare_model\u001b[39m.\u001b[39mmodel(config\u001b[39m.\u001b[39mmodel_path)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
-      "\u001b[1;32m/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb Cell 10\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     prepare_model_config \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39mget_prepare_model_config()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     prepare_model \u001b[39m=\u001b[39m PrepareModel(config\u001b[39m=\u001b[39mprepare_model_config)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     prepare_model\u001b[39m.\u001b[39mmodel(config\u001b[39m.\u001b[39;49mmodel_path)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigurationManager' object has no attribute 'model_path'"
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'model_path'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'model_path'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'model_path'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'model_path'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'model_path'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb Cell 10\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     prepare_base_model\u001b[39m.\u001b[39mget_model()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
+      "\u001b[1;32m/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb Cell 10\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     config \u001b[39m=\u001b[39m ConfigurationManager()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     prepare_base_model_config \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39;49mget_prepare_model_config()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     prepare_base_model \u001b[39m=\u001b[39m PrepareModel(config\u001b[39m=\u001b[39mprepare_base_model_config)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     prepare_base_model\u001b[39m.\u001b[39mget_model()\n",
+      "\u001b[1;32m/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m config \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39mprepare_model\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m create_directories([config\u001b[39m.\u001b[39mroot_dir])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m prepare_model_config \u001b[39m=\u001b[39m PrepareModelConfig(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     root_dir\u001b[39m=\u001b[39mPath(config\u001b[39m.\u001b[39mroot_dir),\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     model \u001b[39m=\u001b[39m Path(config\u001b[39m.\u001b[39;49mmodel_path),\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     params_image_size\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparams\u001b[39m.\u001b[39mIMAGE_SIZE,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/towet/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/research/02_prepare_model.ipynb#X12sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mreturn\u001b[39;00m prepare_model_config\n",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/Inteligent-Radiologist-Assistant/Intelligent-Radiologist-Assistant-Knee-Injury-/venv/lib/python3.10/site-packages/box/box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'model_path'\""
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    prepare_model_config = config.get_prepare_model_config()\n",
-    "    prepare_model = PrepareModel(config=prepare_model_config)\n",
-    "    prepare_model.model()\n",
-    "    \n",
+    "    prepare_base_model_config = config.get_prepare_model_config()\n",
+    "    prepare_base_model = PrepareModel(config=prepare_base_model_config)\n",
+    "    prepare_base_model.get_model()\n",
+    "   \n",
     "except Exception as e:\n",
     "    raise e"
    ]
